<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerLoginActivity"
    android:id="@+id/login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="320dp"
                android:layout_height="178dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"

                android:layout_marginStart="57dp"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="64dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textViewTitle"
                style="@style/txtViewHeading"
                android:layout_below="@id/imageView"
                android:text="@string/join_our_hotel_today"
                android:textColor="#021737"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/usernameEdt"
                style="@style/EditTexts"
                android:layout_below="@id/textViewTitle"
                android:layout_marginTop="50dp"
                android:drawableEnd="@drawable/ic_user"
                android:hint="User name"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/passEdt"
                style="@style/EditTexts"
                android:layout_below="@id/usernameEdt"
                android:layout_marginTop="30dp"

                android:drawableEnd="@drawable/ic_pass"
                android:hint="@string/passEdt"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/loginButton"
                style="@style/Button.White"
                android:layout_width="224dp"
                android:layout_height="75dp"
                android:layout_below="@+id/passEdt"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="62dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="58dp"
                android:backgroundTint="#0C2D4E"
                android:onClick="login"
                android:text="@string/loginButton" />

            <TextView
                android:id="@+id/txtView"
                style="@style/LoginRegisterTxtView"
                android:layout_below="@+id/loginButton"
                android:layout_centerHorizontal="true"
                android:minHeight="48dp"
                android:onClick="register"
                android:text="@string/txtView" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>