<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceptionLogin"
    android:background="@drawable/background"
    android:id="@+id/login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginStart="142dp"
                android:layout_marginEnd="149dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="67dp" />

            <TextView
                android:id="@+id/textViewTitle"
                style="@style/txtViewHeading"
                android:text="@string/enjoy_your_work"
                android:layout_below="@+id/logo"
                android:textColor="#021737"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/usernameEdt"
                style="@style/EditTexts"
                android:layout_width="376dp"
                android:hint="User name"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_user"

                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/passEdt"
                style="@style/EditTexts"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameEdt"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_pass"
                android:hint="@string/passEdt"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/loginReceptionBtn"
                style="@style/Button.White"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passEdt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:backgroundTint="#0C2D4E"
                android:onClick="loginReception"
                android:text="@string/loginButton" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

